--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* ==========================================================================
    #Table-of-Contents
    ========================================================================== */
@@ -10,7 +11,7 @@
     #Header
     #Content
     #Footer
-  Pages / Components
+  #Pages / #Components
     #Tables
     #Modals
 */
@@ -28,6 +29,9 @@
 .btn-info {
   background: #1ab394;
   border-color: #1ab394; }
+  .btn-info:hover {
+    background: #14866f;
+    border-color: #14866f; }
 
 /* ==========================================================================
    #Typography
@@ -530,6 +534,86 @@ body {
     max-width: 80%; } }
 
 /* (min-width: 576px)  */
+/* ==========================================================================
+   #Pages
+   ========================================================================== */
+/* #Login Page */
+.login-page {
+  background: #10705d;
+  /* btn */
+  /* tagline */ }
+  .login-page .content {
+    padding: 10vw 5vw; }
+  .login-page .db-box {
+    padding: 20px;
+    margin: 0 auto;
+    max-width: 400px;
+    width: 100%; }
+  .login-page .db-boxes-row {
+    flex-direction: column; }
+  .login-page .top-nav-bar {
+    padding: 0 20px; }
+    .login-page .top-nav-bar a {
+      width: 100%;
+      text-align: center;
+      margin: 0;
+      font-size: 2em; }
+  .login-page .btn {
+    background: #44A08D;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to bottom, #1ab394, #44A08D);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to bottom, #1ab394, #44A08D);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
+    .login-page .btn:hover {
+      background: #357c6d;
+      /* fallback for old browsers */
+      background: -webkit-linear-gradient(to bottom, #14866f, #357c6d);
+      /* Chrome 10-25, Safari 5.1-6 */
+      background: linear-gradient(to bottom, #14866f, #357c6d);
+      /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+      border-color: #14866f; }
+  .login-page .tagline {
+    background: none;
+    padding: 20px 25px;
+    margin: 30px auto 0;
+    font-weight: bold;
+    line-height: 1.2em;
+    font-size: 5.5vw;
+    font-family: Bookman;
+    text-align: center;
+    color: #fff;
+    text-shadow: 0 0 2px #000;
+    position: relative;
+    overflow: hidden;
+    border-color: #1ab394;
+    opacity: .5;
+    /* (min-width: 500px)  */ }
+    .login-page .tagline:hover {
+      opacity: 1; }
+    @media only screen and (min-width: 500px) {
+      .login-page .tagline {
+        font-size: 1.6rem; } }
+    .login-page .tagline::before, .login-page .tagline::after {
+      text-shadow: none;
+      position: absolute;
+      font-size: 9rem;
+      line-height: .9em;
+      display: block;
+      height: 60px;
+      font-family: Georgia;
+      opacity: .2;
+      z-index: -1;
+      color: #1ab394; }
+    .login-page .tagline::before {
+      content: '“';
+      top: -12px;
+      left: -7px; }
+    .login-page .tagline::after {
+      content: '”';
+      bottom: -12px;
+      right: -6px; }
+
 /* ==========================================================================
    #Components
    ========================================================================== */
@@ -1118,12 +1202,12 @@ table.dataTable > tbody > tr.child ul.dtr-details {
 
 /* notes button set */
 .breadcrumb {
-  padding: 0;
-  line-height: 1em;
-  background: none;
-  margin: 0 0 5px;
-  /* (max-width: 575px)  */ }
-  @media only screen and (max-width: 575px) {
-    .breadcrumb {
-      margin-top: 5px;
-      justify-content: center; } }
+  padding: 5px 10px;
+  background: #f5f5f5;
+  margin: -15px -20px 5px;
+  border-radius: 0;
+  border-bottom: 1px solid #eee; }
+
+.breadcrumb-item + .breadcrumb-item::before {
+  content: '»';
+  opacity: .5; }
