--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -42,6 +42,15 @@
         border-color: darken($primary, 10%);
       }
     }
+    .btn-info:not(:disabled):not(.disabled).active,
+    .btn-info:not(:disabled):not(.disabled):active,
+    .show>.btn-info.dropdown-toggle{
+      background: darken($primary, 15%);
+      border-color: darken($primary, 15%);
+    }
+    ::placeholder{
+      opacity: .6 !important;
+    }
 
 
 /* ==========================================================================
@@ -82,19 +91,157 @@
     .top-nav-bar{
       position: relative;
       z-index: 1;
-    }
-    .top-nav-bar, .top-nav-bar .navbar{
       background: #1ab394;
-    }
-    .navbar-toggler-icon i{
-      line-height: 30px;
-    }
-    .top-nav-bar a{
-      color: #fefefe;
-    }
-    .top-nav-bar .navbar-toggler{
-      background: #fefefe;
-    }
+
+      a{
+        color: #fefefe;
+      }
+      .navbar{
+        background: none;
+        padding-right: 0;
+      }
+      .navbar-toggler{
+        background: #fefefe;
+        padding: 0 5px;
+      }
+      .navbar-toggler-icon{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      & > .row{
+        margin: 0;
+      }
+      .navbar-brand{
+        flex: 1;
+
+        a:hover{
+          text-decoration: none;
+          text-shadow: 0 0 10px #000;
+        }
+      }
+      .dropdown-menu{
+        padding: 0;
+        background: darken($primary, 15%);
+        font-size: 1em;
+        line-height: 1em;
+        padding: 5px;
+        width: auto;
+        min-width: 0;
+
+        .dropdown-item{
+          font-size: .9em;
+          line-height: 1em;
+          padding: 5px 10px;;
+          margin: 0 0 5px;
+          border-radius: 2px;
+          background: $primary;
+
+          &:last-child{
+            margin: 0;
+          }
+          &:hover{
+            background: darken($primary, 5%);
+            color: #fff;
+          }
+        }
+      }
+      .dropdown-toggle::after{
+        display: none;
+      }
+      .profile-link-wrapper{
+        position: relative;
+      }
+      .profile-link{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 5px 10px 5px 5px !important;
+        margin-left: 10px;
+
+        .profile-link-image{
+          margin: -10px 5px -10px 0;
+          height: 35px;
+          width: 35px;
+
+          img{
+            border-radius: 50%;
+            border: 2px solid darken($primary, 15%);
+            max-width: 100%;
+          }
+        } /* profile link image */
+        .profile-link-username{
+          font-size: 1.2em;
+          line-height: 1em;
+        }
+      }
+      .profile-link-icon{
+        min-width: 20px;
+        text-align: left;
+      }
+      .search-form{
+        position: relative;
+
+        .search-form-field{
+          height: auto;
+          line-height: 1em;
+          border-radius: 40px;
+          padding-right: 30px;
+        }
+        .search-form-button{
+          color: $primary;
+          background: none;
+          border: none;
+          position: absolute;
+          right: 5px;
+          cursor: pointer;
+
+          &:hover{
+            color: darken($primary, 10%);
+          }
+        }
+      }
+
+
+      @media only screen and (min-width: 768px)  {
+        & > .row > .col-md-12{
+          padding-left: 0;
+          padding-right: 25px;
+        }
+      } /* (min-width: 768px)  */
+      @media only screen and (max-width: 991px)  {
+        & > .row > .col-md-12{
+          padding-left: 25px;
+        }
+      } /* (max-width: 991px)  */
+      @media only screen and (max-width: 575px)  {
+        .navbar{
+          /* flex-direction: row-reverse; */
+          padding-left: 0;
+          padding-right: 0;
+        }
+        & > .row > .col-md-12{
+          padding-left: 0;
+          padding-right: 0;
+        }
+        .navbar-brand{
+          margin: 0;
+          order: 1;
+        }
+        .profile-link-wrapper{
+          order: 2;
+        }
+        .search-form{
+          order: 3;
+          width: 100%;
+        }
+        .profile-link{
+          margin: 0;
+        }
+      } /* (max-width: 575px)  */
+    } /* top nav bar */
+
+
 
 
 /* ==========================================================================
@@ -121,6 +268,7 @@
       z-index: 0;
       padding: 10px;
       min-height: 95vh;
+      transition: max-width 0.2s ease;
 
       & .nav-list,
       & .nav-sublist{
@@ -172,6 +320,7 @@
       .heading-link{
         padding: 10px;
         display: block;
+        color: #fff;
       }
 
       .heading-icon{
@@ -254,9 +403,6 @@
           padding: 10px 5px;
           text-align: center;
         }
-        .open-link i{
-          color: #fff;
-        }
         .close-icon{
           display: none;
         }
@@ -282,6 +428,7 @@
           }
           .heading-label{
             display: inline;
+            color: inherit;
           }
           .heading-link{
             text-align: left;
