--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -733,6 +733,12 @@
           box-sizing: border-box;
           opacity: 1;
 
+          .title{
+            font-weight: bold;
+            line-height: 1em;
+            margin-bottom: 5px;
+          }
+
           @media only screen and (min-width: 768px) and (max-width: 1100px)  {
             &{
               width: 100%;
