--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -537,16 +537,20 @@
       display: block;
       color: inherit;
       flex: 1;
-      padding: 0;
+      padding: 10px;
+      padding-right: 0;
       max-height: 60px;
       overflow: hidden;
       position: relative;
     }
     .db-box-list li .task-link.long{
       border-bottom: 1px dotted;
+      margin-bottom: 10px;
+      margin-left: 10px;
+      padding-left: 0;
     }
     .db-box-list li .task-link-wrapper{
-      padding: 10px 15px;
+      padding: 0;
       border-radius: 5px;
       /* background: #ffe3ba; */
       display: flex;
@@ -561,7 +565,7 @@
     .db-box-list li .task-link-dropdown{
       display: flex;
       align-items: center;
-      margin: -10px -15px -10px 0;
+      margin: 0;
     }
     .db-box-list li .dropdown-toggle::after{
       margin: 0 auto;
@@ -1010,9 +1014,10 @@
       height: 100%;
       color: #fff;
       text-transform: uppercase;
-      font-family: Impact;
+      font-family: Arial Black;
       font-size: 1em;
       line-height: 1.1em;
+      font-weight: bold;
       padding: 10px;
       flex: 1;
       align-items: center;
@@ -1516,23 +1521,94 @@
 
     .assoc-list{
       margin-top: 1rem;
-    }
-    .assoc-list-link{
-      display: block;
-      padding: 5px 10px;
-      border-radius: 3px;
-      background: #e9ecef;
-      margin-bottom: 5px;
-      color: #212529;
-      font-weight: bold;
-      border: 1px solid $tone-grey;
-    }
-    .assoc-list-item:last-child .assoc-list-link{
-      margin-bottom: 0;
-    }
-    .assoc-list-link:hover{
-      text-decoration: none;
-    }
+
+      .assoc-list-item{
+        display: flex;
+        border-radius: 3px;
+        background: #e9ecef;
+        margin-bottom: 5px;
+        border: 1px solid $tone-grey;
+
+        &:last-child{
+          margin-bottom: 0;
+        }
+      } /* assoc list item */
+      .assoc-list-link{
+        flex: 1;
+        padding: 5px;
+        padding-right: 0;
+        color: #212529;
+        font-weight: bold;
+
+        &:hover{
+          text-decoration: none;
+        }
+      } /* assoc list link */
+
+      .assoc-link-dropdown{
+        display: flex;
+        align-items: center;
+
+        .assoc-link-arrow{
+          display: block;
+          padding: 5px;
+          &:hover{
+            text-decoration: none;
+          }
+          &::after{
+            content: "\f13a";
+            font-weight: 900;
+            display: block;
+            width: 16px;
+            height: 16px;
+            margin: -16px auto 0;
+            z-index: 1;
+            text-align: center;
+            font-family: "Font Awesome 5 Free";
+            opacity: 0;
+            font-size: .7em;
+            border: none;
+          }
+
+        } /* assoc link arrow */
+        &.dropdown.show{
+          .assoc-link-arrow::after{
+            opacity: .5;
+          }
+        } /* show */
+        .dropdown-menu{
+          min-width: 100px;
+          width: 100px;
+          padding: 0;
+          transform: translate3d(-37px, 35px, 0px) !important;
+          border: 3px solid;
+          border-color: #2c3036;
+          background: #2c3036;
+          margin-top: -8px;
+
+          &::before{
+            content: '';
+            display: block;
+            width: 5px;
+            height: 5px;
+            z-index: 1;
+            border-left: 5px solid transparent;
+            border-right: 5px solid transparent;
+            border-bottom: 5px solid #2c3036;
+            margin: -8px auto 3px;
+          }
+
+          .btn-group{
+            display: flex;
+            .btn{
+              padding: 0.1em 0.4em;
+              flex: 1;
+            }
+          }
+        } /* dropdown menu */
+      } /* assoc link dropdown */
+
+    } /* assoc list */
 
     .notes-list{
       margin-top: 1rem;
@@ -1594,6 +1670,10 @@
     }
 
     .documents-container{
+      display: flex;
+      align-items: stretch;
+      justify-content: flex-start;
+      flex-wrap: wrap;
       padding-top: 10px;
 
       .document-item{
@@ -1603,9 +1683,17 @@
         text-align: center;
         border: 1px solid $tone-grey;
         position: relative;
+        margin: 10px 5px 0;
+        display: flex;
+        flex-direction: column;
+        overflow: hidden;
 
         &:hover{
           border-color: $dark-grey;
+
+          .icon{
+            color: $dark-grey;
+          }
         }
 
         &::before{
@@ -1625,31 +1713,41 @@
           margin: 0;
           line-height: 1em;
           font-weight: bold;
+          flex: 1 0 auto;
         } /* document title */
         .icon{
           font-size: 3em;
           line-height: 1em;
           padding-bottom: 5px;
+          color: $tone-grey;
         }
         .link{
           color: inherit;
+          display: flex;
+          flex-direction: column;
+          flex: 1;
           &:hover{
             text-decoration: none;
             color: inherit;
           }
         }
-        .button-group{
+        .btn-group{
           background: $tone-grey;
-          padding: 5px 0 4px;
+          padding: 5px 5px 4px;
           font-size: 1em;
           text-align: center;
           line-height: 1em;
+          display: flex;
 
           .btn{
             padding: 0.1em 0.4em;
+            flex: 1;
           }
         }
       } /* document item */
-
-
     } /* documents container */
+    @media only screen and (max-width: 359px)  {
+      .add-doc-link span{
+        display: none;
+      }
+    } /* (max-width: 359px)  */
