--- a/public/css/main.css
+++ b/public/css/main.css
@@ -735,6 +735,262 @@ body {
       bottom: -12px;
       right: -6px; }
 
+/* #Invoice View Page */
+.invoice-wrapper {
+  border: 1px solid #ddd;
+  box-shadow: 0 0 5px #ddd;
+  border-radius: 3px;
+  padding: 30px;
+  /* invoice info */
+  /* company info */
+  /* invoice addressee */ }
+  .invoice-wrapper .invoice-info-col {
+    max-width: 250px; }
+  .invoice-wrapper .company-info-col {
+    max-width: none;
+    flex: 1; }
+  .invoice-wrapper .invoice-info {
+    max-width: 250px;
+    margin-left: auto; }
+    .invoice-wrapper .invoice-info .title {
+      background: #414141;
+      color: #fff;
+      text-align: center;
+      border-radius: 3px; }
+    .invoice-wrapper .invoice-info .invoice-details .form-group {
+      display: flex;
+      align-items: center;
+      padding-bottom: 5px;
+      margin-bottom: 5px; }
+      .invoice-wrapper .invoice-info .invoice-details .form-group label {
+        padding-right: 10px; }
+      .invoice-wrapper .invoice-info .invoice-details .form-group .form-control {
+        flex: 1;
+        padding: 0em 0.4em;
+        height: auto;
+        text-align: center; }
+  .invoice-wrapper .company-info address {
+    display: flex; }
+    .invoice-wrapper .company-info address .logo img {
+      max-width: 100%; }
+    .invoice-wrapper .company-info address .company-details {
+      flex: 1;
+      padding-left: 10px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      line-height: 1em; }
+      .invoice-wrapper .company-info address .company-details .company-name {
+        font-size: 1.5em;
+        margin: 0; }
+  .invoice-wrapper .invoice-addressee {
+    margin-top: 100px; }
+    .invoice-wrapper .invoice-addressee > .row > .col {
+      min-width: 260px;
+      max-width: none;
+      flex: 1; }
+      .invoice-wrapper .invoice-addressee > .row > .col .title {
+        font-size: .9em;
+        color: #fff;
+        background: #414141;
+        padding: 5px 10px;
+        border-radius: 3px;
+        margin-top: 20px; }
+    .invoice-wrapper .invoice-addressee .addressee-info address {
+      padding: 0 10px;
+      font-size: .9em;
+      line-height: 1.2em; }
+      .invoice-wrapper .invoice-addressee .addressee-info address .name {
+        margin: 0; }
+    .invoice-wrapper .invoice-addressee .property-info address {
+      padding: 0 10px;
+      font-size: .9em;
+      line-height: 1.2em; }
+    .invoice-wrapper .invoice-addressee .balance-details {
+      display: flex;
+      align-items: center; }
+      .invoice-wrapper .invoice-addressee .balance-details .balance-due {
+        font-size: 2em;
+        height: auto;
+        width: 200px;
+        text-align: center;
+        padding: 0;
+        flex: 1; }
+      .invoice-wrapper .invoice-addressee .balance-details .due-date {
+        width: 100px;
+        margin-left: 10px;
+        flex: 1;
+        display: flex;
+        flex-direction: column; }
+        .invoice-wrapper .invoice-addressee .balance-details .due-date .form-control {
+          text-align: center;
+          height: auto;
+          padding: 0em 0.4em; }
+        .invoice-wrapper .invoice-addressee .balance-details .due-date label {
+          text-align: center;
+          margin-bottom: 5px; }
+  .invoice-wrapper .account-activity {
+    margin-bottom: 100px; }
+    .invoice-wrapper .account-activity .title {
+      font-size: 1em;
+      margin: 50px 0 5px;
+      font-weight: bold; }
+    .invoice-wrapper .account-activity .activity-table {
+      margin: 0; }
+    .invoice-wrapper .account-activity .total-detail .title {
+      float: right;
+      margin: 0;
+      color: #fff;
+      background: #414141;
+      width: auto;
+      display: inline-block;
+      padding: 10px 15px;
+      border-radius: 0 0 3px 3px; }
+      .invoice-wrapper .account-activity .total-detail .title span {
+        font-weight: normal;
+        font-style: italic;
+        margin-left: 25px; }
+
+/* invoice wrapper */
+@media only print {
+  body {
+    background: none; }
+  .top-nav-bar,
+  .sidebar,
+  .breadcrumb,
+  .page-heading {
+    display: none; }
+  .content {
+    width: 100% !important;
+    max-width: none;
+    padding: none; }
+    .content .db-boxes-row {
+      padding: 0; }
+      .content .db-boxes-row .db-box {
+        padding: 0;
+        border: none;
+        box-shadow: none; }
+        .content .db-boxes-row .db-box .invoice-wrapper {
+          border: none;
+          box-shadow: none;
+          padding: 0; }
+          .content .db-boxes-row .db-box .invoice-wrapper .invoice-info .title {
+            color: #414141;
+            border-bottom: 3px solid #414141;
+            border-top: 3px solid #414141;
+            background: none; }
+          .content .db-boxes-row .db-box .invoice-wrapper .invoice-addressee > .row > .col .title {
+            background: none;
+            font-weight: bold;
+            color: #414141;
+            border-bottom: 3px solid #414141; }
+          .content .db-boxes-row .db-box .invoice-wrapper .activity-table th {
+            color: #414141; }
+          .content .db-boxes-row .db-box .invoice-wrapper .activity-table thead tr {
+            border: 3px solid #414141; }
+          .content .db-boxes-row .db-box .invoice-wrapper .activity-table tbody tr {
+            border-left: 1px solid #e4e8eb;
+            border-right: 1px solid #e4e8eb; }
+          .content .db-boxes-row .db-box .invoice-wrapper .activity-table tbody tr:last-child td {
+            border-bottom: 3px solid #e4e8eb; }
+          .content .db-boxes-row .db-box .invoice-wrapper .total-detail .title {
+            color: #414141;
+            background: none;
+            border: 3px solid #414141; } }
+
+/* print  */
+@media only screen and (max-width: 1425px) and (min-width: 1139px) {
+  .invoice-wrapper .invoice-addressee .balance-details {
+    flex-direction: column; }
+  .invoice-wrapper .invoice-addressee .balance-details .due-date {
+    width: 100%;
+    flex-direction: row;
+    margin: 5px 0 0;
+    align-items: center;
+    max-width: 200px; }
+    .invoice-wrapper .invoice-addressee .balance-details .due-date label {
+      margin-right: 5px; }
+    .invoice-wrapper .invoice-addressee .balance-details .due-date .form-control {
+      flex: 1; } }
+
+/* (max-width: 1425px)  */
+@media only screen and (max-width: 1090px) {
+  .company-info .logo {
+    max-width: 130px; } }
+
+/* (max-width: 1090px)  */
+@media only screen and (max-width: 830px) {
+  .invoice-wrapper .company-info address {
+    flex-direction: column; }
+    .invoice-wrapper .company-info address .company-details {
+      padding: 0; } }
+
+/* (max-width: 830px)  */
+@media only screen and (max-width: 700px) {
+  .invoice-wrapper {
+    padding: 15px 0 0; }
+    .invoice-wrapper .invoice-addressee {
+      margin-top: 0; } }
+
+/* (max-width: 700px)  */
+@media only screen and (max-width: 630px) {
+  .invoice-head > .row > .col {
+    width: 100%;
+    max-width: none;
+    min-width: 0;
+    flex: none; }
+  .invoice-wrapper .company-info address {
+    flex-direction: row; }
+    .invoice-wrapper .company-info address .company-details {
+      padding-left: 10px; }
+  .invoice-wrapper .invoice-info {
+    max-width: none; }
+    .invoice-wrapper .invoice-info .title {
+      text-align: left;
+      padding: 0 10px; }
+    .invoice-wrapper .invoice-info .invoice-details {
+      max-width: 250px;
+      margin-right: auto; }
+  /* invoice wrapper */ }
+
+/* (max-width: 630px)  */
+@media only screen and (max-width: 530px) {
+  .activity-table .description {
+    display: none; }
+  .invoice-wrapper .company-info address {
+    flex-direction: column; }
+    .invoice-wrapper .company-info address .company-details {
+      padding: 0; }
+  .invoice-wrapper .invoice-addressee .balance-details {
+    flex-direction: column;
+    align-items: flex-start; }
+  .invoice-wrapper .invoice-addressee .balance-details .due-date {
+    width: 100%;
+    flex-direction: row;
+    margin: 5px 0 0;
+    align-items: center;
+    max-width: 200px; }
+    .invoice-wrapper .invoice-addressee .balance-details .due-date label {
+      margin-right: 5px; }
+    .invoice-wrapper .invoice-addressee .balance-details .due-date .form-control {
+      flex: 1; } }
+
+/* (max-width: 530px)  */
+@media only screen and (max-width: 350px) {
+  .activity-table .ref {
+    display: none; }
+  .invoice-wrapper .invoice-addressee > .row > .col {
+    min-width: 100%; }
+  .invoice-wrapper .invoice-addressee .balance-details .balance-due {
+    max-width: 100%; }
+  .invoice-wrapper .invoice-info .invoice-details .form-group label {
+    flex: 1; }
+  .invoice-wrapper .account-activity .total-detail .title {
+    text-align: center; }
+    .invoice-wrapper .account-activity .total-detail .title span {
+      margin: 0; } }
+
+/* (max-width: 350px)  */
 /* ==========================================================================
    #Components
    ========================================================================== */
@@ -995,6 +1251,29 @@ table.dataTable > tbody > tr.status-2 + tr.child {
   .data-table .view-link i {
     font-size: 1.5em; }
 
+/* Themed Table */
+.themed-table {
+  font-size: 14px;
+  line-height: 1.2em;
+  border-radius: 5px;
+  overflow: hidden;
+  text-align: center;
+  /* tr */ }
+  .themed-table th {
+    background: #414141;
+    color: #fff;
+    text-align: center; }
+  .themed-table tbody tr {
+    border-left: 10px solid #e4e8eb;
+    border-right: 10px solid #e4e8eb; }
+    .themed-table tbody tr:last-child td {
+      border-bottom: 6px solid #e4e8eb; }
+    .themed-table tbody tr td.amount {
+      text-align: right; }
+    .themed-table tbody tr td.description {
+      text-align: left; }
+
+/* themed-table */
 .contact-button {
   width: 100%;
   display: flex;
