--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -884,6 +884,348 @@
     }
 
 
+    /* #Invoice View Page */
+    .invoice-wrapper{
+      border: 1px solid #ddd;
+      box-shadow: 0 0 5px #ddd;
+      border-radius: 3px;
+      padding: 30px;
+
+      .invoice-info-col{
+        max-width: 250px;
+      }
+      .company-info-col{
+        max-width: none;
+        flex: 1;
+      }
+      .invoice-info{
+        max-width: 250px;
+        margin-left: auto;
+
+        .title{
+          background: $dark-grey;
+          color: #fff;
+          text-align: center;
+          border-radius: 3px;
+        }
+        .invoice-details .form-group{
+          display: flex;
+          align-items: center;
+          padding-bottom: 5px;
+          margin-bottom: 5px;
+
+          label{
+            padding-right: 10px;
+          }
+          .form-control{
+            flex: 1;
+            padding: 0em 0.4em;
+            height: auto;
+            text-align: center;
+          }
+        }
+      } /* invoice info */
+      .company-info address{
+        display: flex;
+        .logo{
+          img{max-width: 100%;}
+        }
+        .company-details{
+          flex: 1;
+          padding-left: 10px;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          line-height: 1em;
+
+          .company-name{
+            font-size: 1.5em;
+            margin: 0;
+          }
+        }
+      } /* company info */
+      .invoice-addressee{
+        margin-top: 100px;
+
+        > .row > .col{
+          min-width: 260px;
+          max-width: none;
+          flex: 1;
+
+          .title{
+            font-size: .9em;
+            color: #fff;
+            background: $dark-grey;
+            padding: 5px 10px;
+            border-radius: 3px;
+            margin-top: 20px;
+          }
+        }
+        .addressee-info address{
+          padding: 0 10px;
+          font-size: .9em;
+          line-height: 1.2em;
+
+          .name{
+            margin: 0;
+          }
+        }
+        .property-info address{
+          padding: 0 10px;
+          font-size: .9em;
+          line-height: 1.2em;
+        }
+        .balance-details{
+          display: flex;
+          align-items: center;
+
+          .balance-due{
+            font-size: 2em;
+            height: auto;
+            width: 200px;
+            text-align: center;
+            padding: 0;
+            flex: 1;
+          }
+          .due-date{
+            width: 100px;
+            margin-left: 10px;
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+
+            .form-control{
+              text-align: center;
+              height: auto;
+              padding: 0em 0.4em;
+            }
+            label{
+              text-align: center;
+              margin-bottom: 5px;
+            }
+          }
+        }
+      } /* invoice addressee */
+
+      .account-activity{
+        margin-bottom: 100px;
+
+        .title{
+          font-size: 1em;
+          margin: 50px 0 5px;
+          font-weight: bold;
+        }
+        .activity-table{
+          margin: 0;
+        }
+        .total-detail{
+          .title{
+            float: right;
+            margin: 0;
+            color: #fff;
+            background: $dark-grey;
+            width: auto;
+            display: inline-block;
+            padding: 10px 15px;
+            border-radius: 0 0 3px 3px;
+
+            span{
+              font-weight: normal;
+              font-style: italic;
+              margin-left: 25px;
+            }
+          }
+        }
+      }
+    } /* invoice wrapper */
+    @media only print {
+      body{background: none;}
+      .top-nav-bar,
+      .sidebar,
+      .breadcrumb,
+      .page-heading{
+        display: none;
+      }
+      .content{
+        width: 100% !important;
+        max-width: none;
+        padding: none;
+
+        .db-boxes-row{
+          padding: 0;
+
+          .db-box{
+            padding: 0;
+            border: none;
+            box-shadow: none;
+
+            .invoice-wrapper{
+              border: none;
+              box-shadow: none;
+              padding: 0;
+
+              .invoice-info .title{
+                color: $dark-grey;
+                border-bottom: 3px solid $dark-grey;
+                border-top: 3px solid $dark-grey;
+                background: none;
+              }
+
+              .invoice-addressee > .row > .col .title{
+                background: none;
+                font-weight: bold;
+                color: $dark-grey;
+                border-bottom: 3px solid $dark-grey;
+              }
+
+              .activity-table th{
+                color: $dark-grey;
+              }
+              .activity-table thead tr{
+                border: 3px solid $dark-grey;
+              }
+              .activity-table tbody tr{
+                border-left: 1px solid #e4e8eb;
+                border-right: 1px solid #e4e8eb;
+              }
+              .activity-table tbody tr:last-child td{
+                border-bottom: 3px solid #e4e8eb;
+              }
+
+              .total-detail .title{
+                color: $dark-grey;
+                background: none;
+                border: 3px solid $dark-grey;
+              }
+            }
+          }
+        }
+      }
+    } /* print  */
+    @media only screen and (max-width: 1425px) and (min-width: 1139px)  {
+      .invoice-wrapper .invoice-addressee .balance-details{
+        flex-direction: column;
+      }
+      .invoice-wrapper .invoice-addressee .balance-details .due-date{
+        width: 100%;
+        flex-direction: row;
+        margin: 5px 0 0;
+        align-items: center;
+        max-width: 200px;
+
+        label{
+          margin-right: 5px;
+        }
+        .form-control{
+          flex: 1;
+        }
+      }
+    } /* (max-width: 1425px)  */
+    @media only screen and (max-width: 1090px)  {
+      .company-info .logo{
+        max-width: 130px;
+      }
+    } /* (max-width: 1090px)  */
+    @media only screen and (max-width: 830px)  {
+      .invoice-wrapper .company-info address{
+        flex-direction: column;
+
+        .company-details{
+          padding: 0;
+        }
+      }
+    } /* (max-width: 830px)  */
+    @media only screen and (max-width: 700px)  {
+      .invoice-wrapper{
+        padding: 15px 0 0;
+
+        .invoice-addressee{
+          margin-top: 0;
+        }
+      }
+    } /* (max-width: 700px)  */
+    @media only screen and (max-width: 630px)  {
+      .invoice-head > .row > .col{
+        width: 100%;
+        max-width: none;
+        min-width: 0;
+        flex: none;
+      }
+      .invoice-wrapper{
+        .company-info address{
+          flex-direction: row;
+
+          .company-details{
+            padding-left: 10px;
+          }
+        }
+        .invoice-info{
+          max-width: none;
+
+          .title{
+            text-align: left;
+            padding: 0 10px;
+          }
+          .invoice-details{
+            max-width: 250px;
+            margin-right: auto;
+          }
+        }
+      } /* invoice wrapper */
+    } /* (max-width: 630px)  */
+    @media only screen and (max-width: 530px)  {
+      .activity-table .description{
+        display: none;
+      }
+      .invoice-wrapper .company-info address{
+        flex-direction: column;
+
+        .company-details{
+          padding: 0;
+        }
+      }
+      .invoice-wrapper .invoice-addressee .balance-details{
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      .invoice-wrapper .invoice-addressee .balance-details .due-date{
+        width: 100%;
+        flex-direction: row;
+        margin: 5px 0 0;
+        align-items: center;
+        max-width: 200px;
+
+        label{
+          margin-right: 5px;
+        }
+        .form-control{
+          flex: 1;
+        }
+      }
+    } /* (max-width: 530px)  */
+    @media only screen and (max-width: 350px)  {
+      .activity-table .ref{
+        display: none;
+      }
+      .invoice-wrapper .invoice-addressee > .row > .col{
+        min-width: 100%;
+      }
+      .invoice-wrapper .invoice-addressee .balance-details .balance-due{
+        max-width: 100%;
+      }
+      .invoice-wrapper .invoice-info .invoice-details .form-group label{
+        flex: 1;
+      }
+      .invoice-wrapper .account-activity .total-detail .title{
+        text-align: center;
+
+        span{
+          margin: 0;
+        }
+      }
+    } /* (max-width: 350px)  */
+
+
 /* ==========================================================================
    #Components
    ========================================================================== */
@@ -1175,6 +1517,36 @@
         font-size: 1.5em;
       }
     }
+
+    /* Themed Table */
+    .themed-table{
+      font-size: 14px;
+      line-height: 1.2em;
+      border-radius: 5px;
+      overflow: hidden;
+      text-align: center;
+
+      th{
+        background: $dark-grey;
+        color: #fff;
+        text-align: center;
+      }
+      tbody tr{
+        border-left: 10px solid #e4e8eb;
+        border-right: 10px solid #e4e8eb;
+
+        &:last-child td{
+          border-bottom: 6px solid #e4e8eb;
+        }
+
+        td.amount{
+          text-align: right;
+        }
+        td.description{
+          text-align: left;
+        }
+      } /* tr */
+    } /* themed-table */
 
 
 
