--- a/public/css/main.css
+++ b/public/css/main.css
@@ -70,6 +70,24 @@ body {
   list-style: none;
   line-height: 1em; }
 
+.input {
+  display: block;
+  width: 100%;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #e9ecef;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: .25rem;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  word-wrap: break-word; }
+  .input:empty::before {
+    content: 'n/a';
+    opacity: .6; }
+
 /* ==========================================================================
    #Header
    ========================================================================== */
@@ -221,7 +239,9 @@ body {
   .sidebar .nav-sublist {
     padding: 0;
     list-style: none;
-    line-height: 1em; }
+    line-height: 1em;
+    position: sticky;
+    top: 10px; }
   .sidebar a {
     color: #fff; }
     .sidebar a:hover {
@@ -1043,9 +1063,13 @@ body {
   padding-bottom: 0; }
 
 label {
-  margin-bottom: 0;
+  margin-bottom: 5px;
   line-height: 1em;
-  font-weight: bold; }
+  font-weight: bold;
+  display: block; }
+
+.visit-link .icon {
+  margin-left: 5px; }
 
 .form-group.flexed {
   display: flex;
@@ -1465,6 +1489,29 @@ table.dataTable > tbody > tr.child ul.dtr-details {
   background: #f5f5f5;
   border-radius: 0 0 20px 20px;
   padding-bottom: 1.1rem; }
+
+.profile-detail-col .col {
+  max-width: none;
+  flex-grow: 1; }
+
+.profile-detail-col .col-created,
+.profile-detail-col .col-updated,
+.profile-detail-col .col-type,
+.profile-detail-col .col-status {
+  min-width: 150px; }
+
+.profile-detail-col .col-phone {
+  min-width: 235px; }
+
+.profile-detail-col .col-street2 {
+  min-width: 245px; }
+
+.profile-detail-col .col-name {
+  min-width: 300px; }
+
+.profile-detail-col .col-account-url {
+  min-width: 140px;
+  max-width: 140px; }
 
 .profile-wrapper .heading.divider {
   margin: 40px 0 0;
